remove api key in code

--- a/DS_R_CertFinal/C9W1_Exercise2_API.ipynb
+++ b/DS_R_CertFinal/C9W1_Exercise2_API.ipynb
@@ -153,7 +153,7 @@
    "outputs": [],
    "source": [
     "# need to be replaced by your real API key\n",
-    "your_api_key <- \"a8a4a46b3eeb184d4a812a8f6aaa5e02\"\n",
+    "your_api_key <- \"\"\n",
     "# Input q:city name, appid: API KEY, units: preferred units e.g. 'Metric'/'Imperial'\n",
     "current_query <- list(q = \"Seoul\", appid = your_api_key, units=\"metric\")"
    ]
